# mkdocs-demo

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  test_page1.md  test_page2.md  test_page3.md  test_page4.md
search/: search_index.json
test_page1/: index.html
test_page2/: index.html
test_page3/: index.html
test_page4/: index.html
