[tool.poetry]
name = "mkdocs-demo"
version = "0.1.0"
description = "Demo repository to setup mkdocs"
authors = ["Hendrik Scherner"]
readme = "README.md"
packages = [ {include = "mkdocs_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
